[package]
name = "pysentry"
version = "0.3.7"
edition = "2021"
rust-version = "1.79"
description = "Security vulnerability auditing for Python packages"
license = "GPL-3.0"
repository = "https://github.com/nyudenkov/pysentry"
keywords = ["python", "security", "audit", "vulnerabilities"]
categories = ["development-tools"]

[lib]
name = "pysentry"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pysentry"
path = "src/main.rs"

[features]
python = ["pyo3"]

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
fs-err = "3.1.1"
futures = "0.3.31"
owo-colors = "4.2.2"
pep440_rs = "0.7.3"
pyo3 = { version = "0.26.0", features = ["extension-module"], optional = true }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }
rustc-hash = "2.1.1"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.22.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["fs", "io-util", "rt-multi-thread", "macros", "process"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zip = { version = "4.5.0", default-features = false, features = ["deflate"] }
