[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0 || ^3.11.0"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
yarl = "^1.8.1"
ujson = "^5.5.0"
redis = {extras = ["hiredis", "asyncio"], version = "^4.3.4"}
httptools = "^0.5.0"
sentry-sdk = "^1.9.9"
loguru = "^0.6.0"
aioredis = "^2.0.1"
tortoise-orm = {extras = ["accel", "asyncpg"], version = "^0.19.2"}
fastapi-login = "^1.8.3"
aerich = "^0.7.1"
aiobotocore = "^2.4.0"
emails = "^0.6"
jinja2 = "^3.1.2"
fastapi-pagination = "^0.11.0"
lxml = "^4.9.2"
celery = {version = "^5.2.7", extras = ["sqs", "redis"]}
httpx-oauth = "^0.13.0"
pillow = "^10.0.0"
pdfreader = "^0.1.12"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "^0.961"
isort = "^5.10.1"
yesqa = "^1.3.0"
black = "^22.3.0"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
anyio = "^3.6.2"
pytest-env = "^0.6.2"
httpx = "^0.22.0"
nest-asyncio = "^1.5.6"

[tool.poetry.group.dev.dependencies]
tortoise-orm-stubs = "^0.3.8"
pre-commit = "^3.2.2"
wemake-python-styleguide = "^0.17.0"
fakeredis = "^2.10.3"
json2yaml = "^1.2.0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 119
lines_after_imports = 2
include_trailing_comma = true
skip = ["migrations/*.py", "node_modules", "venv"]


[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'
indent_size=4

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
plugins = ["pydantic.mypy"]

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "BACKEND_DB_BASE=backend_test",
    "BACKEND_SENTRY_DSN=",
    "BACKEND_ENVIRONMENT=test",
]


[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.flake8]
ignore = "E501, E265, F811, B008, B010, PT001, VNE003, DJ01, PIE783, PIE785, SIM113, SIM102, FS003, W504, PIE801, E203"
per-file-ignores = [
    "__init__.py:F401, ABS101" # F401 imported but unused, ABS101 Relative import found
]
max-line-length = "160"
exclude =[
      "static",
      "migrations",
      "frontend",
      ".git",
      "__pycache__",
      "docs"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
